boris-teledoister-bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boris-teledoister-bot-deployment
  labels:
    app: boris-teledoister-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boris-teledoister-bot
  template:
    metadata:
      labels:
        app: boris-teledoister-bot
    spec:
      containers:
        - name: boris-teledoister-bot
          image: paulbuzakov/boris-teledoister-bot:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: boris-teledoister-bot-service
spec:
  selector:
    app: boris-teledoister-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
