boris-teledoister-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boris-teledoister-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/api"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - teledoist.paulbuzakov.com
        - www.teledoist.paulbuzakov.com
      secretName: tls-secret
  rules:
    - host: teledoist.paulbuzakov.com
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: boris-teledoister-bot-service
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: boris-teledoister-blog-service
                port:
                  number: 80
